--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,21 +6,21 @@ padding: 0;
 
 /* structure */
 body {
-	background: #000 url(..images/bg.png);
+	background: #000;
 	font-family: Arial, Verdana;
 	color: #fff;
-	font-size: 12px;
+	font-size: 10px;
 }
 
 h1 {
 	color: #fff;
 	font-weight: bold;
-	font-size: 24px;
+	font-size: 14px;
 }
 h3 {
 	color: #fff;
 	font-weight: bold;
-	font-size: 14px;
+	font-size: 12px;
 }
 p {
 	color: #fff;
