--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,24 +1,24 @@
 /* CSS for MOBILE devices */
 
 body {
-	background: #fff;
+	background: #273555;
 	font-family: Arial, Verdana;
-	color: #000;
+	color: #fff;
 	font-size: 12px;
 }
 
 h1 {
-	color: #000;
+	color: #fff;
 	font-weight: bold;
 	font-size: 24px;
 }
 h3 {
-	color: #000;
+	color: #fff;
 	font-weight: bold;
 	font-size: 14px;
 }
 p {
-	color: #000;
+	color: #fff;
 }
 
 #green { color: #37873f; }
