--- a/css/admin.css
+++ b/css/admin.css
@@ -1,8 +1,8 @@
 /* CSS for INDEX.php showing for everything beside mobile devices */
 
 body {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 	background: #273555 url(../images/wrapper-bg.png) repeat;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
@@ -29,7 +29,7 @@ h3 {
 }
 
 p, ul, ol {
-	margin-top: 0;
+	margin-top: 0px;
 	line-height: 180%;
 }
 
@@ -89,13 +89,13 @@ img.aligncenter {
 
 #logo {
 	margin: 0 0 30px 0;
-	padding: 0;
+	padding: 0px;
 	color: #FFFFFF;
 }
 
 #logo h1, #logo p {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 }
 
 #logo h1 {
